--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,4 @@
 # ignore
-**/test_emb.csv
-**/train_emb.csv
-**/embedded_1k_reviews.csv
-**/curie.csv
-**/train_curie.csv
-**/test_curie.csv
-**/babbage.csv
+data/text_embeddings/*
 models/*
 wandb/*
