--- a/conf/dataset/text.yaml
+++ b/conf/dataset/text.yaml
@@ -1,6 +1,6 @@
-name: "text_data"
+name: "text"
 data_dir: "data/training/text"
 file: "text.csv"
 parameters: bow_std
 extra_dir: "data/training/column"
-extra_file: "clean_column.csv"
+extra_file: "column.csv"
